<resources>
    <string name="app_name">TestMaterialComponents</string>
    <string name="login_txt">Login</string>
    <string name="cancel_txt">Cancel</string>
    <string name="pwd_txt">请输入密码</string>
    <string name="pwd_again_txt">请再次输入密码</string>
    <string name="name_txt">请输入用户名</string>
    <string name="name">用户名</string>
    <string name="pwd">密码</string>
    <string name="pwd_again">确认密码</string>
</resources>